# Algorithms-and-Data-Structure

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  README.md
complexities/: CMakeLists.txt  complexity_analyzer.cpp  complexity_analyzer.hpp  hash_map_analyzer.cpp  hash_map_analyzer.hpp  list_analyzer.cpp  list_analyzer.hpp  main.cpp
dependencies/: CMakeLists.txt
dependencies/cxxopts/: CMakeLists.txt
dependencies/heap/: CMakeLists.txt
dependencies/heap/heap/: header-begin.hpp  header-end.hpp  heap-monitor.cpp  heap-monitor.hpp
dependencies/stest/: CMakeLists.txt
dependencies/stest/libstest/: config.hpp  run.hpp  test.hpp
dependencies/stest/libstest/impl/: config.cpp  diagnostics.cpp  diagnostics.hpp  list_tests.cpp  list_tests.hpp  run.cpp  run_and_print.cpp  run_and_print.hpp  terminal.cpp  terminal.hpp  test.cpp  utils.cpp  utils.hpp  visitors.hpp
doc/: Doxyfile  Doxyfile-sp
doc/semestral_project/: documentation.en.markdown  documentation.markdown  template.en.tex  template.tex
doc/semestral_project/img/: uml-activity-execute.puml  uml-cli.puml  uml-data-structures.puml  uml-domain.puml  uml-hierarchy.puml
doc/uml/: abstract-memory-types.puml  explicit-hierarchy.puml  explicit-sequence.puml  hierarchy.puml  implicit-hierarchy.puml  implicit-sequence.puml  memory-managers.puml
libds/: CMakeLists.txt  constants.hpp  utils.hpp
libds.tests/: CMakeLists.txt  main.cpp
libds.tests/adt/: adt.test.hpp  array.test.cpp  array.test.hpp  list.test.cpp  list.test.hpp  priority_queue.test.cpp  priority_queue.test.hpp  queue.test.cpp  queue.test.hpp  sort.test.cpp  sort.test.hpp  sorts.test.hpp  stack.test.cpp  stack.test.hpp  table.test.cpp  table.test.hpp
libds.tests/amt/: explicit_hierarchy.test.cpp  explicit_hierarchy.test.hpp  explicit_sequence.test.cpp  explicit_sequence.test.hpp  hierarchy.test.hpp  implicit_hierarchy.test.cpp  implicit_hierarchy.test.hpp  implicit_sequence.test.cpp  implicit_sequence.test.hpp  sequence.test.hpp
libds.tests/mm/: compact_memory_object_manager.test.cpp  compact_memory_object_manager.test.hpp  compact_memory_trivial_manager.test.cpp  compact_memory_trivial_manager.test.hpp  system_memory_manager.test.cpp  system_memory_manager.test.hpp
libds.tests/other/: utils.cpp  utils.hpp
libds/adt/: abstract_data_type.hpp  array.hpp  list.hpp  priority_queue.hpp  queue.hpp  sorts.hpp  stack.hpp  table.hpp
libds/amt/: abstract_memory_type.hpp  explicit_hierarchy.hpp  explicit_sequence.hpp  hierarchy.hpp  implicit_hierarchy.hpp  implicit_sequence.hpp  sequence.hpp
libds/mm/: compact_memory_manager.hpp  compact_memory_object_manager.hpp  compact_memory_trivial_manager.hpp  compact_operation_memory_manager.hpp  memory_manager.hpp  system_memory_manager.hpp
semestral_project/: CMakeLists.txt  dummy.hpp  main.cpp
semestral_project/data/: README.md  dummy.txt
semestral_project/lib/cli/: cli_commands_logic.cpp  cli_commands_logic.hpp  cli_helper_printer.cpp  cli_helper_printer.hpp
semestral_project/lib/data_strucutre/: data_structure.cpp  data_structure.hpp  hash_map_data_structure.cpp  hash_map_data_structure.hpp
semestral_project/lib/data_strucutre/sorter/: data_sorter.hpp
semestral_project/lib/structs/: accident.hpp
semestral_project/libdf/: terminal.cpp  terminal.hpp
semestral_project/libdf/cli/: cli.cpp  cli.hpp
semestral_project/libdf/data_handlers/: csv_loader.hpp  data_frame.hpp
